@@ -1,3 +1,8 @@
+2013-04-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* twitter/tweetentry.py, theme/Default/status.html: Improved
+	  a scheme for Twitter interfaces.
+
 2013-04-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
